--- a/client/index.html
+++ b/client/index.html
@@ -1,22 +1,94 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Gumroad Coding Challenge v2</title>
-<link rel="stylesheet" href="./styles.css"></link>
-</head>
+  <head>
+    <title>Gumroad Coding Challenge v2</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
 
-<body>
-  <div class="container">
-    <div class="product__header">
-      <img class="product__image" src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" />
-      <div class="product__info">
-        <h1>Example Product</h1>
-        <div class="rating__snack">
+  <body>
+    <div class="container">
+      <div id="open-modal" class="modal-window">
+        <div>
+          <a href="#" title="Close" class="modal-close">Close</a>
+          <h1>Add review</h1>
+          <form></form>
+        </div>
+      </div>
+      <div class="product__header">
+        <img
+          class="product__image"
+          src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80"
+        />
+        <div class="product__info">
+          <h1>Example Product</h1>
+          <div class="rating__snack">
+            <div class="rating">
+              <div class="rating__stars">
+                <div class="rating__stars--filled" style="width: 70%">
+                  <svg
+                    id="star"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="currentColor"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+                    />
+                  </svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                </div>
+                <div class="rating__stars--empty">
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                </div>
+              </div>
+            </div>
+            <span>12 reviews</span>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            ultricies eleifend metus ornare suscipit. In dictum elit at justo
+            efficitur, sit amet imperdiet ipsum vehicula. Aenean eget dui eu
+            tortor feugiat scelerisque vel a erat. In placerat efficitur mi.
+            Fusce quis arcu ut odio ornare vulputate. Suspendisse nec nulla at
+            diam dictum volutpat. Donec at rutrum nunc, id euismod nisi.
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="reviews">
+        <div class="reviews__header">
+          <h2>Reviews</h2>
+          <a class="ml-4" href="#open-modal">Add review</a>
+        </div>
+
+        <div class="review">
           <div class="rating">
             <div class="rating__stars">
-              <div class="rating__stars--filled" style="width: 70%">
-                <svg id="star" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" />
+              <div class="rating__stars--filled" style="width: 65%">
+                <svg
+                  id="star"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+                  />
                 </svg>
                 <svg><use href="#star"></use></svg>
                 <svg><use href="#star"></use></svg>
@@ -31,48 +103,21 @@
                 <svg><use href="#star"></use></svg>
               </div>
             </div>
+            <span>2.5 / 5</span>
           </div>
-          <span>12 reviews</span>
-        </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies eleifend metus ornare suscipit. In dictum elit at justo efficitur, sit amet imperdiet ipsum vehicula. Aenean eget dui eu tortor feugiat scelerisque vel a erat. In placerat efficitur mi. Fusce quis arcu ut odio ornare vulputate. Suspendisse nec nulla at diam dictum volutpat. Donec at rutrum nunc, id euismod nisi.</p>
-      </div>
-    </div>
-    <hr />
-    <div class="reviews">
-      <div class="reviews__header">
-        <h2>Reviews</h2>
-        <button class="ml-4">Add review</button>
-      </div>
-      
-      <div class="review">
-        <div class="rating">
-          <div class="rating__stars">
-            <div class="rating__stars--filled" style="width: 65%">
-              <svg id="star" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" />
-              </svg>
-              <svg><use href="#star"></use></svg>
-              <svg><use href="#star"></use></svg>
-              <svg><use href="#star"></use></svg>
-              <svg><use href="#star"></use></svg>
-            </div>
-            <div class="rating__stars--empty">
-              <svg><use href="#star"></use></svg>
-              <svg><use href="#star"></use></svg>
-              <svg><use href="#star"></use></svg>
-              <svg><use href="#star"></use></svg>
-              <svg><use href="#star"></use></svg>
-            </div>
-          </div>
-          <span>2.5 / 5</span>
-        </div>
-           
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies eleifend metus ornare suscipit</p>
-      </div>
-    </div>
-  </div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="./scripts.js"></script>
 
-</body>
-</html> 
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            ultricies eleifend metus ornare suscipit
+          </p>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./scripts.js"></script>
+  </body>
+</html>
