--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,92 @@
         <div>
           <a href="#" title="Close" class="modal-close">Close</a>
           <h1>Add review</h1>
-          <form></form>
+          <form id="createReviewForm" class="form review__form">
+            <fieldset class="rating__input">
+              <input type="radio" id="star5" name="rating" value="5" /><label
+                class="full"
+                for="star5"
+                title="Awesome - 5 stars"
+                ><svg><use href="#star"></use></svg
+              ></label>
+              <!-- <input
+                type="radio"
+                id="star4half"
+                name="rating"
+                value="4 and a half"
+              /><label
+                class="half"
+                for="star4half"
+                title="Pretty good - 4.5 stars"
+              ></label> -->
+              <input type="radio" id="star4" name="rating" value="4" /><label
+                class="full"
+                for="star4"
+                title="Pretty good - 4 stars"
+                ><svg><use href="#star"></use></svg
+              ></label>
+              <!-- <input
+                type="radio"
+                id="star3half"
+                name="rating"
+                value="3 and a half"
+              /><label
+                class="half"
+                for="star3half"
+                title="Meh - 3.5 stars"
+              ></label> -->
+              <input type="radio" id="star3" name="rating" value="3" /><label
+                class="full"
+                for="star3"
+                title="Meh - 3 stars"
+                ><svg><use href="#star"></use></svg
+              ></label>
+              <!-- <input
+                type="radio"
+                id="star2half"
+                name="rating"
+                value="2 and a half"
+              /><label
+                class="half"
+                for="star2half"
+                title="Kinda bad - 2.5 stars"
+              ></label> -->
+              <input type="radio" id="star2" name="rating" value="2" /><label
+                class="full"
+                for="star2"
+                title="Kinda bad - 2 stars"
+                ><svg><use href="#star"></use></svg
+              ></label>
+              <!-- <input
+                type="radio"
+                id="star1half"
+                name="rating"
+                value="1 and a half"
+              /><label
+                class="half"
+                for="star1half"
+                title="Meh - 1.5 stars"
+              ></label> -->
+              <input type="radio" id="star1" name="rating" value="1" /><label
+                class="full"
+                for="star1"
+                title="Sucks big time - 1 star"
+                ><svg><use href="#star"></use></svg
+              ></label>
+              <!-- <input
+                type="radio"
+                id="starhalf"
+                name="rating"
+                value="half"
+              /><label
+                class="half"
+                for="starhalf"
+                title="Sucks big time - 0.5 stars"
+              ></label> -->
+            </fieldset>
+            <textarea name="review"></textarea>
+            <button type="submit">Save</button>
+          </form>
         </div>
       </div>
       <div class="product__header">
