--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,19 @@
                 class="full"
                 for="star5"
                 title="Awesome - 5 stars"
-                ><svg><use href="#star"></use></svg
+                ><svg
+                  id="star"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+                  /></svg
               ></label>
               <!-- <input
                 type="radio"
@@ -94,7 +106,7 @@
                 title="Sucks big time - 0.5 stars"
               ></label> -->
             </fieldset>
-            <textarea name="review"></textarea>
+            <textarea name="description"></textarea>
             <button type="submit">Save</button>
           </form>
         </div>
@@ -151,52 +163,40 @@
         </div>
       </div>
       <hr />
-      <div class="reviews">
+      <section>
         <div class="reviews__header">
           <h2>Reviews</h2>
           <a class="ml-4" href="#open-modal">Add review</a>
         </div>
-
-        <div class="review">
-          <div class="rating">
-            <div class="rating__stars">
-              <div class="rating__stars--filled" style="width: 65%">
-                <svg
-                  id="star"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="currentColor"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
-                  />
-                </svg>
-                <svg><use href="#star"></use></svg>
-                <svg><use href="#star"></use></svg>
-                <svg><use href="#star"></use></svg>
-                <svg><use href="#star"></use></svg>
+        <ul class="reviews">
+          <li class="review">
+            <div class="rating">
+              <div class="rating__stars">
+                <div class="rating__stars--filled" style="width: 65%">
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                </div>
+                <div class="rating__stars--empty">
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                  <svg><use href="#star"></use></svg>
+                </div>
               </div>
-              <div class="rating__stars--empty">
-                <svg><use href="#star"></use></svg>
-                <svg><use href="#star"></use></svg>
-                <svg><use href="#star"></use></svg>
-                <svg><use href="#star"></use></svg>
-                <svg><use href="#star"></use></svg>
-              </div>
+              <span>2.5 / 5</span>
             </div>
-            <span>2.5 / 5</span>
-          </div>
 
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            ultricies eleifend metus ornare suscipit
-          </p>
-        </div>
-      </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+              ultricies eleifend metus ornare suscipit
+            </p>
+          </li>
+        </ul>
+      </section>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
