--- a/client/index.html
+++ b/client/index.html
@@ -117,7 +117,7 @@
           src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80"
         />
         <div class="product__info">
-          <h1>Example Product</h1>
+          <h1 id="productName">Example Product</h1>
           <div class="rating__snack">
             <div class="rating">
               <div class="rating__stars">
@@ -152,14 +152,7 @@
             </div>
             <div><span id="numReviews"></span> reviews</div>
           </div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            ultricies eleifend metus ornare suscipit. In dictum elit at justo
-            efficitur, sit amet imperdiet ipsum vehicula. Aenean eget dui eu
-            tortor feugiat scelerisque vel a erat. In placerat efficitur mi.
-            Fusce quis arcu ut odio ornare vulputate. Suspendisse nec nulla at
-            diam dictum volutpat. Donec at rutrum nunc, id euismod nisi.
-          </p>
+          <p id="productDescription"></p>
         </div>
       </div>
       <hr />
