--- a/client/index.html
+++ b/client/index.html
@@ -112,10 +112,7 @@
         </div>
       </div>
       <div class="product__header">
-        <img
-          class="product__image"
-          src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80"
-        />
+        <img class="product__image" src="" />
         <div class="product__info">
           <h1 id="productName">Example Product</h1>
           <div class="rating__snack">
